fix: Tags filter wrap

--- a/src/components/TagsFilter/styles.styl
+++ b/src/components/TagsFilter/styles.styl
@@ -2,6 +2,7 @@
   display flex
   padding 0 20px
   margin-bottom 17px
+  flex-wrap wrap
 
 .tag
   margin-right 21px
